logs/dag_id=my_dag/run_id=manual__2023-05-25T042958.888425+0000/task_id=detail/attempt=1.log
[2023-05-25T04:30:01.803+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: my_dag.detail manual__2023-05-25T04:29:58.888425+00:00 [queued]>
[2023-05-25T04:30:01.817+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: my_dag.detail manual__2023-05-25T04:29:58.888425+00:00 [queued]>
[2023-05-25T04:30:01.818+0000] {taskinstance.py:1308} INFO - Starting attempt 1 of 1
[2023-05-25T04:30:01.840+0000] {taskinstance.py:1327} INFO - Executing <Task(PostgresOperator): detail> on 2023-05-25 04:29:58.888425+00:00
[2023-05-25T04:30:01.846+0000] {standard_task_runner.py:57} INFO - Started process 197 to run task
[2023-05-25T04:30:01.850+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'my_dag', 'detail', 'manual__2023-05-25T04:29:58.888425+00:00', '--job-id', '20', '--raw', '--subdir', 'DAGS_FOLDER/my_dag.py', '--cfg-path', '/tmp/tmptfer0jfd']
[2023-05-25T04:30:01.853+0000] {standard_task_runner.py:85} INFO - Job 20: Subtask detail
[2023-05-25T04:30:01.904+0000] {task_command.py:410} INFO - Running <TaskInstance: my_dag.detail manual__2023-05-25T04:29:58.888425+00:00 [running]> on host 4fd1d35cc618
[2023-05-25T04:30:02.017+0000] {taskinstance.py:1547} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='my_dag' AIRFLOW_CTX_TASK_ID='detail' AIRFLOW_CTX_EXECUTION_DATE='2023-05-25T04:29:58.888425+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-05-25T04:29:58.888425+00:00'
[2023-05-25T04:30:02.019+0000] {sql.py:262} INFO - Executing: 
            CREATE TABLE IF NOT EXISTS detail (
            userID SERIAL PRIMARY KEY,
            FirstName varchar(40) NOT NULL,       
            LastName  varchar(40) NOT NULL,
            Age   integer NOT NULL,
            Sex   varchar(15),
            );
          
[2023-05-25T04:30:02.032+0000] {base.py:73} INFO - Using connection ID 'connectPostges' for task execution.
[2023-05-25T04:30:02.136+0000] {base.py:73} INFO - Using connection ID 'connectPostges' for task execution.
[2023-05-25T04:30:02.143+0000] {sql.py:375} INFO - Running statement: 
            CREATE TABLE IF NOT EXISTS detail (
            userID SERIAL PRIMARY KEY,
            FirstName varchar(40) NOT NULL,       
            LastName  varchar(40) NOT NULL,
            Age   integer NOT NULL,
            Sex   varchar(15),
            );
          , parameters: None
[2023-05-25T04:30:02.145+0000] {taskinstance.py:1824} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 274, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 8:             );
                    ^

[2023-05-25T04:30:02.157+0000] {taskinstance.py:1350} INFO - Marking task as FAILED. dag_id=my_dag, task_id=detail, execution_date=20230525T042958, start_date=20230525T043001, end_date=20230525T043002
[2023-05-25T04:30:02.182+0000] {standard_task_runner.py:109} ERROR - Failed to execute job 20 for task detail (syntax error at or near ")"
LINE 8:             );
                    ^
; 197)
[2023-05-25T04:30:02.223+0000] {local_task_job_runner.py:225} INFO - Task exited with return code 1
[2023-05-25T04:30:02.247+0000] {taskinstance.py:2651} INFO - 0 downstream tasks scheduled from follow-on schedule check
